# dementia_prediction

./: .gitignore  GIT_USAGE.md  PUSH_TO_GITHUB.md  crash_log.txt  fix_pickle_paths.py
FastEHR/: .gitignore  .python-version  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
FastEHR/FastEHR/: __init__.py
FastEHR/FastEHR/adapters/: BEHRT.py  README.md  __init__.py  adapter.py
FastEHR/FastEHR/database/: README.md  __init__.py  collector.py
FastEHR/FastEHR/database/build_db/: __init__.py  build_diagnosis_table.py  build_static_table.py  build_valued_event_tables.py
FastEHR/FastEHR/dataloader/: __init__.py  foundational_loader.py
FastEHR/FastEHR/dataloader/dataset/: README.md  __init__.py  dataset_polars.py
FastEHR/FastEHR/dataloader/tokenizers_local/: README.md  __init__.py  base.py  tokenizers_local.py
FastEHR/FastEHR/dataloader/utils/: __init__.py  study_criteria.py
FastEHR/docs/: conf.py  index.rst  requirements.txt
FastEHR/examples/: README.md
FastEHR/examples/1_build_database/: 1_required_csv_format.ipynb  2_creating_a_database.ipynb  3_interfacing_with_the_database.ipynb  build_database.py
FastEHR/examples/2_build_pre_training_dataset/: build_dataset.py
FastEHR/examples/3_build_fine_tuning_datasets/1_indexing/: 1_indexing.ipynb  2_indexing_on_an_event.ipynb  build_indexed_dataset.py  example_wrappers.py
FastEHR/examples/4_format_adapters/: pretrain.py
FastEHR/examples/4_format_adapters/indexed_datasets/: T2D_hypertension.py
FastEHR/examples/data/diagnoses/: README.md
FastEHR/examples/data/timeseries/: README.md  (+2 more)
(+333 files in other folders)
